--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -56,13 +56,13 @@
             <h2>imagenes de galeria</h2>
             <section class="galeria">
                 <article class="zoom">
-                    <img src="/Img/Galeria/test.jpg" alt="" width="500px" height="500px">
+                    <img src="../Img/Galeria/test.jpg" alt="" width="500px" height="500px">
                 </article>
                 <article class="zoom">
-                    <img src="/Img/Galeria/PC1.jpg" alt="" width="500px" height="500px">
+                    <img src="../Img/Galeria/PC1.jpg" alt="" width="500px" height="500px">
                 </article>
                 <article class="zoom">
-                    <img src="/Img/Galeria/R.jpg" alt="" width="500px" height="500px">
+                    <img src="../Img/Galeria/R.jpg" alt="" width="500px" height="500px">
                 </article>
             </section>
             <h2>videos de galeria</h2>
