--- a/product/product.html
+++ b/product/product.html
@@ -60,61 +60,61 @@
                     <li><a href=#>motherboards</a></li>
                     <div class="index_div">
                         <article class="zoom">
-                            <img src="/Img/Motherboards/imagen (3).png" alt="" width="500px" height="500px">
+                            <img src="../Img/Motherboards/imagen (3).png" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/Motherboards/motherboard amd.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/Motherboards/motherboard amd.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/Motherboards/INTEL MOTHER.png" alt="" width="500px" height="500px">
+                            <img src="../Img/Motherboards/INTEL MOTHER.png" alt="" width="500px" height="500px">
                         </article>
                     </div>
                     <li><a href=#>procesadores</a></li>
                     <div class="index_div">
                         <article class="zoom">
-                            <img src="/Img/procesadores/ryzen 3700x.jpg" alt="" width="500px" height="500px500px">
+                            <img src="../Img/procesadores/ryzen 3700x.jpg" alt="" width="500px" height="500px500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/procesadores/intel i7 12700k.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/procesadores/intel i7 12700k.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/procesadores/Amd Ryzen 5 3400g.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/procesadores/Amd Ryzen 5 3400g.jpg" alt="" width="500px" height="500px">
                         </article>
                     </div class="index_div">
                     <li><a href=#>placas de video</a></li>
                     <div class="index_div">
                         <article class="zoom">
-                            <img src="/Img/placas de video/RX570.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/placas de video/RX570.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/placas de video/RTX3060.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/placas de video/RTX3060.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/placas de video/RX6600XT.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/placas de video/RX6600XT.jpg" alt="" width="500px" height="500px">
                         </article>
                     </div>
                     <li><a href=#>fuentes</a></li>
                     <div class="index_div">
                         <article class="zoom">
-                            <img src="/Img/fuentes/GIGABYTE B700H.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/fuentes/GIGABYTE B700H.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/fuentes/ASUSROG1200.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/fuentes/ASUSROG1200.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/fuentes/CORSAIR TX650M.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/fuentes/CORSAIR TX650M.jpg" alt="" width="500px" height="500px">
                         </article>
                     </div>
                     <li><a href=#>perifericos</a></li>
                     <div class="index_div">
                         <article class="zoom">
-                            <img src="/Img/perifericos/auriculares/cloud 2.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/perifericos/auriculares/cloud 2.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/perifericos/mouse/logitech g pro.jpg" alt="" width="500px" height="500px">
+                            <img src="../Img/perifericos/mouse/logitech g pro.jpg" alt="" width="500px" height="500px">
                         </article>
                         <article class="zoom">
-                            <img src="/Img/perifericos/teclados/vata pro derecha.jpg" alt="" width="500px"
+                            <img src="../Img/perifericos/teclados/vata pro derecha.jpg" alt="" width="500px"
                                 height="500px">
                         </article>
                     </div>
