--- a/about/about.html
+++ b/about/about.html
@@ -55,65 +55,77 @@
         <h2>acerca de nosotros</h2>
         <div>
             <section class="galeria">
-                <article class="textos">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                </article>
-                <article class="textos">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                </article>
-                <article class="textos">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                    eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo
-                    velit vel placeat?
-                    Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                    repellat,
-                </article>
-        </div>
-        </section>
-        <h2>FAQ</h2>
-        <div>
-            <section class="textos">
-                <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae incidunt
-                        necessitatibus quisquam. Ullam assumenda sit fugiat nam excepturi quam qui illum harum
-                        tempora
-                        ex doloremque id molestiae, maxime velit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius quasi repellendus sed
-                        consequuntur inventore vitae necessitatibus expedita, placeat natus nam accusamus culpa
-                        adipisci
-                        nihil deserunt laudantium. Necessitatibus saepe vero veritatis.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum exercitationem, debitis eaque
-                        tempora aperiam reiciendis, quae molestias perferendis iste consectetur expedita blanditiis
-                        aliquid. Odio voluptatum aut explicabo adipisci! Itaque, non.</li>
-                </ul>
+                <div class="animate__animated animate__slideInLeft">
+                    <article class="textos">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                    </article>
+                </div>
+                <div class="animate__animated animate__fadeInDown">
+                    <article class="textos">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                    </article>
+                </div>
+                <div class="animate__animated animate__slideInRight">
+                    <article class="textos">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
+                        Illo
+                        velit vel placeat?
+                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
+                        repellat,
+                    </article>
+                </div>
             </section>
-        </div>
+
+            <h2>FAQ</h2>
+            <div class="animate__animated animate__fadeInUp">
+                <section class="textos">
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae incidunt
+                            necessitatibus quisquam. Ullam assumenda sit fugiat nam excepturi quam qui illum harum
+                            tempora
+                            ex doloremque id molestiae, maxime velit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius quasi repellendus sed
+                            consequuntur inventore vitae necessitatibus expedita, placeat natus nam accusamus culpa
+                            adipisci
+                            nihil deserunt laudantium. Necessitatibus saepe vero veritatis.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum exercitationem, debitis eaque
+                            tempora aperiam reiciendis, quae molestias perferendis iste consectetur expedita blanditiis
+                            aliquid. Odio voluptatum aut explicabo adipisci! Itaque, non.</li>
+                    </ul>
+                </section>
+            </div>
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
         <div class="container p-4 pb-0">
@@ -121,12 +133,11 @@
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">
-                            Company name
+                            *EMPRESA*
                         </h6>
                         <p>
-                            Here you can use rows and columns to organize your footer
-                            content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit.
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
+                                href="./index.html" role="button"><i class="bi bi-motherboard"></i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -155,19 +166,19 @@
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i
-                            class="bi bi-facebook"></i>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!"
-                            role="button"><i class="bi bi-twitter"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #686868" href="#!"
-                            role="button"><i class="bi bi-google"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!"
-                            role="button"><i class="bi bi-instagram"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ca0000" href="#!"
-                            role="button"><i class="bi bi-youtube"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!"
-                            role="button"><i class="bi bi-github"></i></a>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">seguinos</h6>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!"
+                            role="button"><i class="bi bi-facebook"></i>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!"
+                                role="button"><i class="bi bi-twitter"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #686868" href="#!"
+                                role="button"><i class="bi bi-google"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!"
+                                role="button"><i class="bi bi-instagram"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #ca0000" href="#!"
+                                role="button"><i class="bi bi-youtube"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!"
+                                role="button"><i class="bi bi-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -178,4 +189,5 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
