--- a/contact/contact.html
+++ b/contact/contact.html
@@ -57,7 +57,7 @@
             <form class="boton_contacto" action="">
                 <div class="row justify-content-center">
                     <section class="col-4">
-                        
+
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">ingresar nombre</span>
                             <input type="text" class="form-control" placeholder="Nombre" aria-label="nombre
@@ -90,12 +90,12 @@
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">
-                            Company name
+                            *EMPRESA*
                         </h6>
                         <p>
-                            Here you can use rows and columns to organize your footer
-                            content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit.
+
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
+                                href="./index.html" role="button"><i class="bi bi-motherboard"></i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -124,19 +124,19 @@
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i
-                            class="bi bi-facebook"></i>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!"
-                            role="button"><i class="bi bi-twitter"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #686868" href="#!"
-                            role="button"><i class="bi bi-google"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!"
-                            role="button"><i class="bi bi-instagram"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ca0000" href="#!"
-                            role="button"><i class="bi bi-youtube"></i></a>
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!"
-                            role="button"><i class="bi bi-github"></i></a>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">seguinos</h6>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!"
+                            role="button"><i class="bi bi-facebook"></i>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!"
+                                role="button"><i class="bi bi-twitter"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #686868" href="#!"
+                                role="button"><i class="bi bi-google"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!"
+                                role="button"><i class="bi bi-instagram"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #ca0000" href="#!"
+                                role="button"><i class="bi bi-youtube"></i></a>
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!"
+                                role="button"><i class="bi bi-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -147,4 +147,5 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
