--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">
-                            Company name
+                            *EMPRESA*
                         </h6>
                         <p>
-                            Here you can use rows and columns to organize your footer
-                            content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit.
+                            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
+                                href="./index.html" role="button"><i class="bi bi-motherboard"></i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -162,7 +161,7 @@
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">seguinos</h6>
                         <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!"
                             role="button"><i class="bi bi-facebook"></i>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!"
@@ -187,4 +186,5 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
