--- a/contact/contact.html
+++ b/contact/contact.html
@@ -95,7 +95,7 @@
                         <p>
 
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="./index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
