--- a/contact/contact.html
+++ b/contact/contact.html
@@ -57,19 +57,18 @@
             <form class="boton_contacto" action="">
                 <div class="row justify-content-center">
                     <section class="col-4">
-
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">ingresar nombre</span>
+                            <span class="input-group-text" id="basic-addon1">nombre</span>
                             <input type="text" class="form-control" placeholder="Nombre" aria-label="nombre
                 aria-describedby=" basic-addon1="" required>
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">ingresar apellido</span>
+                            <span class="input-group-text">apellido</span>
                             <input type="text" class="form-control" placeholder="Apellido" aria-label="apellido"
                                 required>
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">ingresar mail</span>
+                            <span class="input-group-text">mail</span>
                             <input type="mail" class="form-control" placeholder="mail" aria-label="mail" required>
                         </div>
                         <div class="input-group">
@@ -77,7 +76,7 @@
                             <textarea class="form-control" aria-label="With textarea" required></textarea>
                         </div>
                         <div class="boton_contacto">
-                            <button type="submit" class="btn btn-secondary">Secondary</button>
+                            <button type="submit" class="btn btn-secondary">Ingresar</button>
                         </div>
                     </section>
                 </div>
@@ -93,7 +92,6 @@
                             *EMPRESA*
                         </h6>
                         <p>
-
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
                                 href="../index.html" role="button"><i class="bi bi-motherboard"></i></a>
                         </p>
