--- a/product/product.html
+++ b/product/product.html
@@ -55,7 +55,7 @@
         <div>
             <h2>Lista de productos</h2>
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
-            <section class="productos">
+            <section class="productos col-4" >
                 <ul>
                     <li><a href=#>motherboards</a></li>
                     <div class="index_div">
