--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <a class="text-white" href="./about/about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#">boton arrepentimiento</a>
+                            <a class="text-white" href="#!">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
