cambios en productos

--- a/index.html
+++ b/index.html
@@ -52,13 +52,6 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque harum blanditiis.
-                Tempore,
-                voluptate. Saepe aspernatur eveniet quisquam cum, in cumque assumenda debitis rem magnam
-                necessitatibus
-                ipsam, aliquam earum expedita?</h2>
-        </div>
         <div class="video-container">
             <section class="videos">
                 <article>
@@ -94,32 +87,7 @@
         </div>
         <div>
             <section>
-                <article class="textos">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus.
-                    Dolorem
-                    vero
-                    ducimus
-                    ex
-                    facilis
-                    odit
-                    accusamus illo laborum excepturi ipsam consectetur aliquid odio nam, aut perspiciatis labore
-                    ullam
-                    aspernatur?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus. Dolorem vero
-                    ducimus
-                    ex facilis odit
-                    accusamus illo laborum excepturi ipsam consectetur aliquid odio nam, aut perspiciatis labore
-                    ullam
-                    aspernatur?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus. Dolorem vero
-                    ducimus
-                    ex facilis odit
-                    accusamus illo laborum excepturi ipsam consectetur aliquid odio nam, aut perspiciatis labore
-                    ullam
-                    aspernatur?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus. Dolorem vero
-                    ducimus
-                    ex facilis odit
-                    accusamus illo laborum excepturi ipsam consectetur aliquid odio nam, aut perspiciatis labore
-                    ullam
-                    aspernatur?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, ducimus. Dolorem vero
-                    ducimus</article>
+                <article class="textos"><h2>Realizá tu compra online y recibila en tu domicilio o retirá por nuestro local</h2></article>
             </section>
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
