--- a/product/product.html
+++ b/product/product.html
@@ -51,77 +51,185 @@
             </div>
         </nav>
     </header>
-    <main class="productos__menu">
+    <main>
         <div>
             <h2>Lista de productos</h2>
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
-            <section class="productos col-4" >
-                <ul>
-                    <li><a href=#>motherboards</a></li>
-                    <div class="index_div">
-                        <article class="zoom">
-                            <img src="../Img/Motherboards/imagen (3).png" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/Motherboards/motherboard amd.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/Motherboards/INTEL MOTHER.png" alt="" width="500px" height="500px">
-                        </article>
+            <div>
+                <a class="btn btn-primary productos__menu" href="#!">Motherboards</a>
+            </div>
+            <section class="justify-content-center flex-wrap d-flex align-items-center">
+                <div class="">
+                    <div class="row">
+                        <div class="col-4 col-sm-1">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../Img/Motherboards/imagen.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="text-center card-text">Some quick example text to build on the card title
+                                        and make up
+                                        the
+                                        bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <li><a href=#>procesadores</a></li>
-                    <div class="index_div">
-                        <article class="zoom">
-                            <img src="../Img/procesadores/ryzen 3700x.jpg" alt="" width="500px" height="500px500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/procesadores/intel i7 12700k.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/procesadores/Amd Ryzen 5 3400g.jpg" alt="" width="500px" height="500px">
-                        </article>
-                    </div class="index_div">
-                    <li><a href=#>placas de video</a></li>
-                    <div class="index_div">
-                        <article class="zoom">
-                            <img src="../Img/placas de video/RX570.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/placas de video/RTX3060.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/placas de video/RX6600XT.jpg" alt="" width="500px" height="500px">
-                        </article>
+                </div>
+                <div class="">
+                    <div class="row">
+                        <div class="col-4 col-sm-1">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <li><a href=#>fuentes</a></li>
-                    <div class="index_div">
-                        <article class="zoom">
-                            <img src="../Img/fuentes/GIGABYTE B700H.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/fuentes/ASUSROG1200.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/fuentes/CORSAIR TX650M.jpg" alt="" width="500px" height="500px">
-                        </article>
+                </div>
+                <div class="">
+                    <div class="row">
+                        <div class="col-4 col-sm-1">
+                            <div class="card" style="width: 18rem;">
+                                <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk
+                                        of the card's content.</p>
+                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <li><a href=#>perifericos</a></li>
-                    <div class="index_div">
-                        <article class="zoom">
-                            <img src="../Img/perifericos/auriculares/cloud 2.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/perifericos/mouse/logitech g pro.jpg" alt="" width="500px" height="500px">
-                        </article>
-                        <article class="zoom">
-                            <img src="../Img/perifericos/teclados/vata pro derecha.jpg" alt="" width="500px"
-                                height="500px">
-                        </article>
-                    </div>
-                </ul>
+                </div>
             </section>
         </div>
     </main>
+    </div>
+    <div>
+        <div>
+            <a class="btn btn-primary productos__menu" href="#!">Placas de video</a>
+        </div>
+        <section class="justify-content-center flex-wrap d-flex align-items-center">
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="text-center card-text">Some quick example text to build on the card title
+                                    and make up
+                                    the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 17rem;">
+                            <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/placas de video/RX570.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div>
+        <div>
+            <a class="btn btn-primary productos__menu" href="#!">Perifericos</a>
+        </div>
+        <section class="justify-content-center flex-wrap d-flex align-items-center">
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top"
+                                alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="text-center card-text">Some quick example text to build on the card title
+                                    and make up
+                                    the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk
+                                    of the card's content.</p>
+                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
         <div class="container p-4 pb-0">
